--- a/media/cv-print_old.css
+++ b/media/cv-print_old.css
@@ -53,14 +53,13 @@ table {
 
 body {
 	font: normal normal 400;
-	font-size: 80%;
-	line-height: 1.5em;
+	font-size: 10pt;
+	line-height: 1.35em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: Verdana,sans-serif;
-	margin-top: 1em;
-	margin-left: 1em;
+	/*margin-top: 1em;
+	margin-left: 1em;*/
 }
-
 
 img {
     /* height: auto;
@@ -74,32 +73,32 @@ img {
 
 p {
 	position: relative;
-	left: 33%;
-	margin-bottom: 0.7em;
+	left: 28%;
+	margin-bottom: 0.2em;
 	margin-right: 0;
-	width: 65%;
+	width: 70%;
 }
 
 code {
 	font: normal normal;
-	font-size: 70%;
+	font-size: 60%;
 	/*line-height: 1em;*/
-	font-family: Verdana,monospace,sans-serif;
-	color: #aaa;
+	font-family: Menlo,monospace,sans-serif;
+	color: #ccc;
 }
 
 p code {
 	position: absolute;
-	left: -14%;
+	left: -11%;
 }
 
 
 ul {
 	position: relative;
-	left: 33%;
+	left: 28%;
 	width: 65%;
-	margin-bottom: 1.5em;
-	margin-top: -0.5em;
+	margin-bottom: 1em;
+	/*margin-top: -0.5em;*/
 }
 
 /*uncomment to get dashes in the list*/
@@ -134,7 +133,7 @@ h1 {
 	font-size: 3em;
 	line-height: 1em;
 	position: relative;
-	left: 33%;
+	left: 28%;
 }
 
 h1+p {
@@ -146,26 +145,30 @@ h1+p {
 h2 {
 	font-size: 1.1em;
 	color: #a00;
-	margin-top: 0em;
+	margin-top: 2em;
 	position: relative;
-	top: 1.4em;
+	top: 1.2em;
 	text-align: right;
-	width: 20%;
+	width: 18%;
+}
+
+h2+p {
+	margin-top: 2.5em;
 }
 
 h3 {
 	font-size: 1em;
 	line-height: 2em;
+	color: #ccc;
 	position: relative;
-	top: 1.7em;
+	top: 1.6em;
 	text-align: right;
-	/* left: 3%; */
-	width: 20%;
+	width: 18%;
 }
 
 a {
 	color: inherit;
-	/*text-decoration:none*/
+	text-decoration:none
 }
 
 a:hover {
@@ -175,8 +178,8 @@ a:hover {
 #webaddress {
 	margin-top: 1em;
 	position: relative;
-	left: 33%;
-	color: #aaa;
+	left: 28%;
+	color: #ccc;
 	font-family: Menlo,monospace,sans-serif;
 	font-size: 80%;
 }
@@ -186,20 +189,15 @@ a:hover {
 }
 
 em {
-	font-weight: bold;
-	font-style: italic;
+	font-style: normal;
+	color: #2d4e5e
 }
 
 strong {
 	font-weight: bold;
 }
 
-#address {
+#ghbutton {
 	display: none;
+	visibility: hidden;
 }
-
-
-/*
-@media only screen and (max-width: 480px) {
-	make one column somehow...
-}*/
