--- a/media/cv-screen.css
+++ b/media/cv-screen.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -61,6 +61,17 @@ body {
 	margin-left: 1em;
 }
 
+
+img {
+    /* height: auto;
+    width: auto;
+    max-width: 300px;
+    max-height: 300px; */
+
+    width:540px;
+    height: auto;
+}
+
 p {
 	position: relative;
 	left: 33%;
@@ -71,9 +82,9 @@ p {
 
 code {
 	font: normal normal;
-	font-size: 60%;
+	font-size: 70%;
 	/*line-height: 1em;*/
-	font-family: Menlo,monospace,sans-serif;
+	font-family: Verdana,monospace,sans-serif;
 	color: #aaa;
 }
 
@@ -83,7 +94,7 @@ p code {
 }
 
 
-ul { 
+ul {
 	position: relative;
 	left: 33%;
 	width: 65%;
@@ -126,7 +137,7 @@ h1 {
 	left: 33%;
 }
 
-h1+p { 
+h1+p {
 	/*subtitle*/
 	font-style: italic;
 	font-size: 110%;
@@ -135,7 +146,7 @@ h1+p {
 h2 {
 	font-size: 1.1em;
 	color: #a00;
-	margin-top: 3em;
+	margin-top: 0em;
 	position: relative;
 	top: 1.4em;
 	text-align: right;
@@ -144,10 +155,11 @@ h2 {
 
 h3 {
 	font-size: 1em;
-	line-height: 2em; 
+	line-height: 2em;
 	position: relative;
 	top: 1.7em;
 	text-align: right;
+	/* left: 3%; */
 	width: 20%;
 }
 
@@ -185,7 +197,6 @@ strong {
 #address {
 	display: none;
 }
-
 
 
 /*
